Fixed page overflow issue

--- a/static/css/master.css
+++ b/static/css/master.css
@@ -1,3 +1,7 @@
+html{
+  overflow-x: hidden;
+}
+
 .formInput{
   width: 200px;
 }
@@ -6,7 +10,6 @@
 body{
   background-color: #ffffff;
   font-family: 'Raleway', sans-serif;
-  overflow-x: hidden; 
 }
 
 p{
@@ -36,41 +39,19 @@ p{
   margin-left: 10px;
 }
 
-/* Header Image */
-.headerImage {
-  border-radius: 8px;
+/* Header images */
+.headerImg {
   display: block;
-  margin-left: auto;
-  margin-right: auto;
+  margin: auto;
+  width: 50%; 
   margin-top: -50px;
-  width: 50%;
 }
 
-/* Block image underneath header*/
-#findCourse{
-  position: relative;
-  text-align: center;
-  color: #ffffff;
-  opacity: 0.6;
+/* Image on top of page */
+.topImg {
+  border: 2px solid #ff4040;
 }
 
-/* Text on block image */
-.findCourseText{
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: #000000;
-  font-size: large;
-}
-
-/* Center Images */
-.center {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
-}
 
 .loginForm{
   text-align: center;
@@ -93,7 +74,7 @@ ul{
 
 li{
   float: left;
-  border-right: 1px solid #bbb;
+  border-right: 1.5px solid #ff4040;
 }
 
 ul li{
